# OOP_project24

./: CMakeLists.txt  Makefile  main.cpp  project
headers/: PieChart.h  mainwindow.h  operation.h  sectionwindow.h  sign_up_window.h  user_pick_window.h  users_data.h
proj/: proj.cpp  proj.h
sources/: PieChart.cpp  mainwindow.cpp  operation.cpp  sectionwindow.cpp  sign_up_window.cpp  user_pick_window.cpp  users_data.cpp
task/: CMakeLists.txt  task.h
user_data/: user_data_1.txt  user_data_2.txt  user_data_3.txt  user_data_admin_admin.txt  user_data_biba_qwerty.txt  user_data_boba_qweqqw.txt  usernames.txt
